--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<%#= cl_image_tag("se5ltirb7lh4p9kbpqfa",
+      width: 400, height: 300, crop: :thumb, gravity: :face) %>
+
 <h1>Articles</h1>
 
 <table>
